# Advent-of-Code-2024

./: .gitignore  pyproject.toml
1/: 1.dewy  1.py
10/: 10.py
11/: 11.py
12/: 12.py
13/: 13.py
14/: .gitignore  14.py
2/: 2.dewy  2.py
3/: 3.dewy  3.py
4/: 4.dewy  4.py
5/: 5.py
6/: 6.py
7/: 7.py
8/: 8.py
9/: 9.py
scripts/: aoc_new.py
